@@ -2,7 +2,9 @@ package com.hufudb.openhufu.benchmark;
 
 import com.google.common.reflect.TypeToken;
 import com.google.gson.Gson;
+import com.google.gson.internal.LinkedTreeMap;
 import com.hufudb.openhufu.core.table.GlobalTableConfig;
+import com.hufudb.openhufu.owner.OwnerServer;
 import com.hufudb.openhufu.user.OpenHuFuUser;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -13,6 +15,11 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+
+import org.apache.commons.cli.CommandLine;
+import org.apache.commons.cli.CommandLineParser;
+import org.apache.commons.cli.DefaultParser;
+import org.apache.commons.cli.Option;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -23,6 +30,10 @@ import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
+import org.openjdk.jmh.runner.Runner;
+import org.openjdk.jmh.runner.RunnerException;
+import org.openjdk.jmh.runner.options.Options;
+import org.openjdk.jmh.runner.options.OptionsBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -37,19 +48,35 @@ public class OpenHuFuBenchmark {
   private static final Logger LOG = LoggerFactory.getLogger(OpenHuFuBenchmark.class);
   private static final OpenHuFuUser user = new OpenHuFuUser();
 
+  private static String configPath;
+  public static void main(String[] args) throws RunnerException {
+    org.apache.commons.cli.Options options = new org.apache.commons.cli.Options();
+    Option cmdConfig = new Option("c", "config", true, "user config file path");
+    cmdConfig.setRequired(true);
+    options.addOption(cmdConfig);
+    CommandLineParser parser = new DefaultParser();
+    CommandLine cmd;
+    try {
+      cmd = parser.parse(options, args);
+      configPath = cmd.getOptionValue("c");
+    } catch (Exception e) { // NOSONAR
+      LOG.error("Error when start user", e);
+      System.exit(1);
+    }
+    Options opt = new OptionsBuilder()
+            .include(OpenHuFuBenchmark.class.getSimpleName())
+            .jvmArgs(configPath)
+            .build();
+    new Runner(opt).run();
+  }
   @Setup
   public void setUp() throws IOException {
-    Path resourceDir = Paths.get(System.getenv("OPENHUFU_ROOT"), "benchmark", "src", "main", "resources");
-    List<String> endpoints =
-        new Gson().fromJson(Files.newBufferedReader(
-                Path.of(String.valueOf(resourceDir), "endpoints.json")),
-            new TypeToken<ArrayList<String>>() {
-            }.getType());
-    List<GlobalTableConfig> globalTableConfigs =
-        new Gson().fromJson(Files.newBufferedReader(
-                Path.of(String.valueOf(resourceDir), "tables.json")),
-            new TypeToken<ArrayList<GlobalTableConfig>>() {
-            }.getType());
+    LinkedTreeMap userConfigs = new Gson().fromJson(Files.newBufferedReader(
+                    Path.of(configPath)),
+            LinkedTreeMap.class);
+    List<String> endpoints = (List<String>) userConfigs.get("owners");
+    List<GlobalTableConfig> globalTableConfigs = new Gson().fromJson(new Gson().toJson(userConfigs.get("tables")),
+            new TypeToken<ArrayList<GlobalTableConfig>>() {}.getType());
     LOG.info("Init benchmark of OpenHuFu...");
     for (String endpoint : endpoints) {
       user.addOwner(endpoint, null);
@@ -117,15 +144,15 @@ public void testFullJoin() throws SQLException {
     dataSet.close();
   }
 
-  @Benchmark
-  @Fork(0)
-  @Warmup(iterations = 2)
-  @Measurement(iterations = 1)
-  public void testAvg() throws SQLException {
-    String sql = "select avg(P_PARTKEY) from part";
-    ResultSet dataSet = user.executeQuery(sql);
-    dataSet.close();
-  }
+//  @Benchmark
+//  @Fork(0)
+//  @Warmup(iterations = 2)
+//  @Measurement(iterations = 1)
+//  public void testAvg() throws SQLException {
+//    String sql = "select avg(P_PARTKEY) from part";
+//    ResultSet dataSet = user.executeQuery(sql);
+//    dataSet.close();
+//  }
 
   @Benchmark
   @Fork(0)
